# resume-cli

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
examples/: jd.txt
src/resume_cli/: __init__.py  __main__.py  ai.py  cli.py  config.py  errors.py  ocr.py  output.py  pdf_parser.py  prompts.py  schemas.py  services.py
tests/: conftest.py  test_ai.py  test_cli.py  test_pdf_parser.py  test_schemas.py  test_services.py
